# py2all

./: README.md  mkdocs.yml
.github/workflows/: pytest.yaml
docs/: index.md
py2html/: README.md  pyproject.toml
py2html/.github/workflows/: pytest.yaml
py2html/src/py2html/: __init__.py  html.py  tag.py
py2html/tests/: test_html.py  test_tag.py
